frontend.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp 
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:
    metadata:
      labels:
        app: usermgmt-webapp
    spec:
    #i want to deploy my front end pod
    #before i deploy my frontend i want to ensure the connectivity to my database them only it should deploy my frontend. 
      containers:
        - name: usermgmt-webapp
          image: gopal1409/user-mgt
          ports:
            - containerPort: 8080
