mysql-client.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: mysql-client 
spec:
  containers:
    - name: mysql-container 
      image: alpine 
      command: ['sh','-c',"sleep 1800m"]
      imagePullPolicy: IfNotPresent
