pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: webserver
spec:
  containers:
    - name: webserver 
      image: nginx:1.14.2
      ports:
        - containerPort: 80
