quota.pod-1.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: testpod2
  namespace: quota-demo
spec:
  containers:
    - name: quota-test
      image: busybox 
      command: ['sh','c','echo pod is running ; sleep 5000']
      resources:
        requests:
          cpu: "10m"
        limits:
          cpu: "20m"
