quota.pod-2.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: testpod3
  namespace: quota-demo
spec:
  containers:
    - name: quota-test
      image: busybox 
      command: ['sh','c','echo pod is running ; sleep 5000']
      resources:
        requests:
          cpu: "100m"
        limits:
          cpu: "200m"
