state-headless.yml
apiVersion: v1 
kind: Service 
metadata:
  name: mysql 
spec:
  selector:
    app: mysql 
  ports:
    - port: 3306 
  clusterIP: None
