ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: amdoc-ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /service1

        pathType: Prefix

        backend:

          service:

            name: service1

            port:

              number: 80
      - path: /service2

        pathType: Prefix

        backend:

          service:

            name: service2

            port:

              number: 80
      - path: /login

        pathType: Prefix

        backend:

          service:

            name: usermgmt-webapp

            port:

              number: 8080
